# ouroboros-systems

./: Cargo.toml  README.md
src/: main.rs
src/communication_bus/: mod.rs
src/entry_point/: mod.rs
src/macros/: mod.rs
src/systems/: mod.rs
src/systems/common/: state.rs
src/systems/electrical/: mod.rs
src/systems/electrical/components/: mod.rs
src/systems/electrical/components/ac/: generator.rs
src/systems/electrical/components/dc/: generic_dc_component.rs  mod.rs
src/systems/electrical/components/shared/: bus.rs  circuit_breaker.rs  mod.rs
src/systems/hydraulic/: mod.rs
src/systems/hydraulic/components/: hydraulic_actuator.rs  mod.rs
src/systems/indicating_recording_systems/: mod.rs
src/systems/indicating_recording_systems/independent_instruments/: chronometer.rs  clock.rs  mod.rs
src/traits/: mod.rs
src/utils/delta_time/: mod.rs
